robotnordic.css
/* ... */
.qr-icon{
  width: 15%;
  position: absolute;
  left: 12px;
  top: 10px;
}


/*---------- forside.html ---------*/

/*-----------knapper---------*/

.menuknap {
  position: relative;
  font-family: 'Raleway', sans-serif;
  font-size: 18px;
  letter-spacing: 4px;
  background: #313c40;
  margin-top: 40%;
  margin-left:15%;
  text-align: center;
  padding: 18px 14px;
  width: 70%;
  color:white;
  border-radius: 18px;
}
.menuknap1 {
  position: relative;
  font-family: 'Raleway', sans-serif;
  font-size: 18px;
  letter-spacing: 4px;
  background: #313c40;
  margin-top: 10%;
  margin-left:15%;
  text-align: center;
  padding: 18px 14px;
  width: 70%;
  color:white;
  border-radius: 18px;
}

.menuknap2 {
  position: relative;
  font-family: 'Raleway', sans-serif;
  font-size: 18px;
  letter-spacing: 4px;
  background: #313c40;
  margin-top: 10%;
  margin-left:15%;
  text-align: center;
  padding: 18px 14px;
  width: 70%;
  color:white;
  border-radius: 18px;
}

.menuknap a{
  text-decoration: none;
  color: #ffffff;
  display: block;
}

.menuknap1 a{
  text-decoration: none;
  color: #ffffff;
  display: block;
}

.menuknap2 a{
  text-decoration: none;
  color: #ffffff;
  display: block;
}

.menuknap img{
  margin-right: 30px;
  width: 10%;
}

.menuknap1 img{
  margin-right: 25px;
  width: 10%;
}

.menuknap2 img{
  margin-right: 18px;
  width: 10%;
}

/*-------- budskabstekst ------*/
.custom-select {
  position: absolute;
  font-family: 'Raleway', sans-serif;
  margin-top: 50%;
  margin-left: 1%;
  padding: 18px 14px;
  width: 90%;
  font-size: 18px;
  letter-spacing: 4px;
}

  /* gemmer select sectionen, så det kommer frem når man dropper down*/
  .custom-select select {
    display: none;
  }

  .select-selected {
    background-color: #313c40;
    border-radius: 18px;
  }

  /* design af pil ned */
  .select-selected:after {
    position: absolute;
    content: "";
    top: 50%;
    right: 30px;
    width: 2px;
    height: 10px;
    border: 6px solid transparent;
    border-color: #fff transparent transparent transparent;
  }

  /*gør at pilen vender op ad når select sectionen er nede*/
  .select-selected.select-arrow-active:after {
    border-color: transparent transparent #fff transparent;
    top: 30%;
  }

  /*design teksten i select*/
  .select-items div, .select-selected {
    color: #ffffff;
    padding: 8px 16px;
    border: 1px solid transparent;
    border-color: transparent transparent rgba(0, 0, 0, 0.1) transparent;
    cursor: pointer;
    user-select: none;
    font-family: 'Raleway', sans-serif;
    padding: 20px;
  }

  /* Design for dropdown boksen*/
  .select-items {
    position: absolute;
    background-color: #313c40;
    opacity: 0.8;
    top: 80%;
    margin-left: 1%;
    width: 91%;
    border-radius: 0px 0px 18px 18px;
  }

  /*hide the items when the select box is closed:*/
  .select-hide {
    display: none;
  }

/*---------- Budskabstekst -------- */

.overskriftforside {
  position: relative;
  font-family: 'Raleway', sans-serif;
  letter-spacing: 4px;
  font-size: 29px;
  background-color:#313c40;
  opacity:0.8;
  padding: 18px 18px;
  color: white;
  margin-top: 15%;
  margin-left: 10px;
  margin-right: 10px;
  border-radius: 18px 18px 0px 0px;
}

.budskabstekst {
  position: relative;
  font-family: 'Raleway', sans-serif;
  letter-spacing: 2px;
  background-color:#313c40;
  opacity: 0.8;
  padding: 18px 18px;
  color: white;
  font-size: 18px;
  line-height: 25px;
  margin-left: 10px;
  margin-right: 10px;
  border-radius: 0px 0px 18px 18px;
}


/*------.accordian------*/

.accordion {
  background-color: #313C40;
  color: #ffffff;
  cursor: pointer;
  padding: 28px;
  width: 80%;
  align-items: center;
  border: none;
  border-radius: 10px;
  text-align: center;
  outline: none;
  font-size: 25px;
  transition: 0.4s;
  position: relative;
  margin: 10% 10% 0 10%;
}

.accordion:after {
  content: '\25be';
  float: right;
  transform: scale(1.5);
}


.panel {
  margin: 0 10% 0 10%;
  padding: 5% 5% 5% 5%;
  display: none;
  background-color: white;
  overflow: hidden;
  position: relative;
  font-size: 20px;
  border:1px solid #717171;
  border-radius: 10px;

}

.accordion2, .accordion3 {
  background-color: #2196F3;
  color: #ffffff;
  cursor: pointer;
  width: 100%;
  align-items: center;
  border: none;
  border-radius: 10px;
  text-align: center;
  outline: none;
  transition: 0.4s;
  position: relative;
  padding: 5% 0 5% 0%;
  margin: 3% 0 3% 0%;
  font-size: 16px;
}

.panel2 {
  padding: 5% 5% 5% 5%;
  display: none;
  background-color: white;
  overflow: hidden;
  position: relative;
  font-size: 20px;
}


input {
  width: 80%;
  height: 30px;
  border-radius: 5px;
  border: 1px solid #717171;
  padding-left: 10px;

}

#formularvalg {
  width: 80%;
  height: 30px;
  border-radius: 5px;
  border: 1px solid #717171;
  padding-left: 10px;
}

option {
  font-size: 25px;
  background-color:#F25835;
}

.dropbtn {
  background-color: #313C40;
  color: white;
  padding: 5% 0 5% 0%;
  margin: 3% 0 3% 0%;
  font-size: 16px;
  border: none;
  cursor: pointer;
  width: 100%;
  border-radius: 10px;

}

.dropbtn:hover, .dropbtn:focus {
  background-color: #717171;
}

.dropdown {
  position: relative;
  display: inline;
}

.dropdown-content {
  display: none;
  position: relative;
  background-color: #ffffff;
  min-width: 160px;
  overflow: auto;
  z-index: 1;
  padding: 10% 0 10% 0;
}

.dropdown-content a {
  color: black;
  padding: 12px 16px;
  text-decoration: none;
  display: block;
}

.dropdown a:hover {background-color: #ddd;}

.show {display: block;}

/* The container */
.container {
  display: block;
  position: relative;
  padding-left: 35px;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  margin: 0% 0% 5% 0%;
}

/* Hide the browser's default checkbox */
.container input {
  position: absolute;
  opacity: 0;
  cursor: pointer;
  height: 0;
  width: 0;
}
/* ... */

